# splatmul

./: .gitignore  Cargo.toml  scratch.ipynb  scratch.py
src/: adam.rs  attempts.rs  backward.rs  benchmarking.rs  constants.rs  conversions.rs  generate.rs  lib.rs  main.rs  types.rs
src/attempts/: allocation.rs  classic.rs  simd.rs
tests/: matmul_correctness.rs
