[package]
name = "splatmul"
version = "0.1.0"
edition = "2021"

[lib]
name = "splatmul"
crate-type = ["cdylib", "lib"]

[build]
target = "x86_64-unknown-linux-gnu"
flags = ["-C", "target-cpu=native"]

[dependencies]
half = "2.4.1"
indicatif = { version = "0.17.8", features = ["rayon"] }
ndarray = "0.16.0"
ouroboros = "0.18.4"
pyo3 = { version = "0.22.2", features=["extension-module"] }
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.10.0"

[workspace]
