[package]
name = "splatmul"
version = "0.1.0"
edition = "2021"

[lib]
name = "splatmul"
crate-type = ["cdylib", "lib"]

[build]
# target = "x86_64-unknown-linux-gnu"
flags = ["-C", "target-cpu=native"]

[profile.release]
opt-level = 3
lto = true
codegen-unit = 1
panic = "abort"

[profile.release.package."*"]
opt-level = 3
codegen-unit = 1

[dependencies]
half = "2.4.1"
indicatif = { version = "0.17.8", features = ["rayon"] }
ndarray = "0.16.0"
numpy = "0.21.0"
ouroboros = "0.18.4"
pyo3 = { version = "0.21.0", features=["extension-module"] }
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.10.0"

[workspace]
