[package]
name = "splatmul"
version = "0.1.0"
edition = "2021"

[lib]
name = "splatmul"
crate-type = ["cdylib", "lib"]

[profile.release]
opt-level = 3
lto = true
panic = "abort"
debug-assertions = true

[profile.release.package."*"]
opt-level = 3

[dependencies]
half = "2.4.1"
indicatif = { version = "0.17.8", features = ["rayon"] }
ndarray = "0.16.0"
ndarray-linalg = "0.16.0"
numpy = "0.21.0"
ouroboros = "0.18.4"
pyo3 = { version = "0.21.0", features=["extension-module"] }
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.10.0"
staticsort = "0.4.2"

[workspace]
